# LinuxAppDev

./: .gitignore
00_BuildEnv/: cal
01_TerminalProject/: Makefile  Show.c  a.out  big_curses.c  curses  curses.c  frame_big_curses.c
01_TerminalProject/Lection/: a.out  big_curses  big_curses.c  frame_big_curses  frame_big_curses.c
02_Multifile/: Makefile  out_prog  out_prog-so  prog  prog-a  prog-so  prog.c
02_Multifile/Lection/: Makefile  prog  prog.c
03_Text/Lection/: languages.sh  mktemp_prog  text1  text2
04_Debugging/: Makefile  range  range.c  range1.gdb  range1.output  range2.gdb
04_Debugging/Lection/: a.out  ex1  ex1.c  ex1.gdb
05_Regexps/: Makefile  esub  esub.c
05_Regexps/Lection/: gre  gre.c
06_Tracing/: Icon  Icon_grep  Makefile  move.c
06_Tracing/Lection/: rand  rand.c  ura.c
07_Enviromental/: Makefile.am  configure.ac  rhasher.c
07_Lection/: librhash  librhash.c
08_I18n/Lection/: Makefile.am  ahello.c  configure.ac  ru.po
08_I18n/Lection/ahello_po/: configure.ac
08_I18n/Lection/ahello_po/po/: Makefile.am  ru.po
08_I18n/Lection/ahello_po/src/: ahello.c
08_I18n/Lection/key_po/: Makefile.am  configure.ac
08_I18n/Lection/key_po/po/: POTFILES.in  ru.po
08_I18n/Lection/key_po/src/: key.c
08_I18n/Lection/po/: Makefile.am  ru.po
10_LibTesting/Lection/fantasy/: Makefile.am  Makefile.in  aclocal.m4  config.h.in~  configure.ac  configure~
10_LibTesting/Lection/fantasy/autom4te.cache/: output.0  output.1  output.2  output.3  output.4  requests  traces.0  traces.2  traces.3  traces.4
10_LibTesting/Lection/fantasy/src/: Makefile.am  Makefile.in  libnamegen.c  namegen.c  namegen.h
10_LibTesting/Lection/fantasy/src/.deps/: libnamegen.Plo  libnamegen.Po  namegen.Po
10_LibTesting/Lection/fantasy/src/.libs/: libnamegen.la  libnamegen.lai  libnamegen.so.0  libnamegen.so.0.0.0  namegen
10_LibTesting/Lection/fantasy/tests/: Makefile.am  Makefile.in  dummy.ts  upstream.ts
10_LibTesting/Lection/fantasy/tests/.deps/: dummy.Po
10_LibTesting/Lection/fantasy/tests/.libs/: dummy
10_LibTesting/Lection/libinc/: Makefile  lib.c  lib.h  libg.c  main.c
